# vmstuff

./: .coverage  README.md  pyproject.toml  requirements.txt
tests/: __init__.py  test_html.py  test_network.py  test_url.py
vmstuff/: __init__.py  html.py  network.py  url.py
