[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vmstuff"
version = "0.1.0"
description = "A collection of commonly used utility functions"
requires-python = ">=3.13.2"
authors = [
    { name = "Valerius Mattfeld" },
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=vmstuff"
